Created subscription related model and set permission in admin.py

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,2 @@
-MYSQL_HOST="localhost"
-MYSQL_PORT=3306
-MYSQL_DATABASE="test_db"
-MYSQL_USER="root"
-MYSQL_PASSWORD="your_new_password"
+REDIS_URL = 'redis://localhost:6379/0'
+TIME_ZONE = 'Asia/Dhaka'
