Added docker configuration

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
+# .env for running with docker 
+REDIS_URL = 'redis://redis:6379/0'
+TIME_ZONE = 'Asia/Dhaka'
+EXCHANGE_RATE_API_KEY = "f51f8570710dfaec6e18e689"
+
+#.env for running without docker
 REDIS_URL = 'redis://localhost:6379/0'
 TIME_ZONE = 'Asia/Dhaka'
+EXCHANGE_RATE_API_KEY = "f51f8570710dfaec6e18e689"
