--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ amqp==5.3.1
 asgiref==3.9.1
 billiard==4.2.1
 celery==5.5.3
+certifi==2025.7.14
+charset-normalizer==3.4.2
 click==8.2.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
@@ -11,9 +13,9 @@ django-redis==6.0.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 drf-yasg==1.21.10
+idna==3.10
 inflection==0.5.1
 kombu==5.5.4
-mysqlclient==2.2.7
 packaging==25.0
 prompt_toolkit==3.0.51
 PyJWT==2.9.0
@@ -22,9 +24,11 @@ python-dotenv==1.1.1
 pytz==2025.2
 PyYAML==6.0.2
 redis==5.2.1
+requests==2.32.4
 six==1.17.0
 sqlparse==0.5.3
 tzdata==2025.2
 uritemplate==4.2.0
+urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.13
